# datafusion-python

./: Cargo.toml
docs/source/api/: dataframe.rst
python/datafusion/: __init__.py  common.py  dataframe.py
python/tests/: test_dataframe.py
src/: common.rs  dataframe.rs
src/common/: table_reference.rs
